--- a/main.css
+++ b/main.css
@@ -24,3 +24,23 @@ header ul li {
   padding-top: 300px;
   margin-left: 100px;
 }
+
+#healthForm {
+  display: none;
+}
+
+#edForm {
+  display: none;
+}
+
+#finForm {
+  display: none;
+}
+
+#comOrgForm {
+  display: none;
+}
+
+#employAndHome {
+  display: none;
+}
