--- a/main.css
+++ b/main.css
@@ -44,3 +44,37 @@ header ul li {
 #employAndHome {
   display: none;
 }
+
+input[type="checkbox"], input[type="radio"] {
+  position: absolute;
+  z-index: -1000;
+  overflow: hidden;
+  clip: rect(0, 0, 0, 0);
+  height: 1px;
+  width: 1px;
+  margin: -1px;
+  padding: 0px;
+  border: 0;
+}
+
+input[type="checkbox"] + label, input[type="radio"] + label {
+  padding: 0.7em 1em;
+  background-color: #FFF;
+  color: #30a2cc;
+  font-size: 1.25em;
+  cursor: pointer;
+}
+
+input[type="checkbox"]:checked + label, input[type="radio"]:checked + label {
+  background-color: #30a2cc;
+  color: #FFF;
+}
+
+input[type="checkbox"] + label {
+  display: inline-block;
+  margin: 0.4em;
+  border: 1px solid #DDD;
+  border-radius: 10px;
+  text-transform: uppercase;
+  user-select: none;
+}
