--- a/intro.css
+++ b/intro.css
@@ -1,57 +1,21 @@
-body {
-	height: 2000px;
-	background: #ff0084;
-	background: -moz-linear-gradient(top,  #ff0084 0%, #6d0852 100%);
-	background: -webkit-linear-gradient(top,  #ff0084 0%,#6d0852 100%);
-	background: linear-gradient(to bottom,  #ff0084 0%,#6d0852 100%);
-	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ff0084', endColorstr='#6d0852',GradientType=0 );
-	text-align: center;
-	padding-top: 150px;
-	font-family: arial;
-	font-size: 16px;
-	color: #fff;
-	line-height: 20px;
-	
-	&:first-line {
-		font-size: 22px;
-		line-height: 35px;
-	}
+header {
+  background: -moz-radial-gradient(center, ellipse cover, rgba(255,255,255,1) 0%, rgba(0,0,0,1) 100%); /* ff3.6+ */
+  background: -webkit-gradient(radial, center center, 0px, center center, 100%, color-stop(0%, rgba(255,255,255,1)), color-stop(100%, rgba(0,0,0,1))); /* safari4+,chrome */
+  background:-webkit-radial-gradient(center, ellipse cover, rgba(255,255,255,1) 0%, rgba(0,0,0,1) 100%); /* safari5.1+,chrome10+ */
+  background: -o-radial-gradient(center, ellipse cover, rgba(255,255,255,1) 0%, rgba(0,0,0,1) 100%); /* opera 11.10+ */
+  background: -ms-radial-gradient(center, ellipse cover, rgba(255,255,255,1) 0%, rgba(0,0,0,1) 100%); /* ie10+ */
+  background:radial-gradient(ellipse at center, rgba(255,255,255,1) 0%, rgba(0,0,0,1) 100%); /* w3c */
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#000000',GradientType=1 ); /* ie6-9 */;
+  height: 100px;
+  position: fixed;
+  width: 100%;
 }
 
-a {
-	text-decoration: none;
-	color: #ffffff;
-	font-weight: bold;
-	text-shadow: 0 1px 2px rgba(0,0,0,.5);
-}
-
-.menu {
-	position: fixed;
-	width: calc(100% - 30px);
-	max-width: 960px;
-	height: 55px;
-	left: 50%;
-	transform: translateX(-50%);
-	background: rgba(255,255,255,.4);
-	transition: .5s;
-	
-	&--top {
-		top: 0;
-		border-bottom-left-radius: 4px;
-		border-bottom-right-radius: 4px;
-		
-		&.hide {
-			transform: translateX(-50%) translateY(-100%);
-		}
-	}
-	
-	&--bottom {
-		bottom: 0;
-		border-top-left-radius: 4px;
-		border-top-right-radius: 4px;
-		
-		&.hide {
-			transform: translateX(-50%) translateY(100%);
-		}
-	}
+#flag {
+	opacity: .3;
+	width: 1100px;
+	padding-top: 7.5em;
+	display: block;
+	margin-left: auto;
+	margin-right: auto;
 }
