--- a/intro.css
+++ b/intro.css
@@ -1,3 +1,13 @@
+background {
+	background-image: url('img/flags for gradient resize.png');
+	opacity: .2;
+	width: 1100px;
+	padding-top: 7.5em;
+	display: block;
+	margin-left: auto;
+	margin-right: auto;
+}
+
 header {
   background: -moz-radial-gradient(center, ellipse cover, rgba(255,255,255,1) 0%, rgba(0,0,0,1) 100%); /* ff3.6+ */
   background: -webkit-gradient(radial, center center, 0px, center center, 100%, color-stop(0%, rgba(255,255,255,1)), color-stop(100%, rgba(0,0,0,1))); /* safari4+,chrome */
@@ -11,11 +21,14 @@ header {
   width: 100%;
 }
 
-#flag {
-	opacity: .3;
-	width: 1100px;
-	padding-top: 7.5em;
-	display: block;
-	margin-left: auto;
-	margin-right: auto;
+#slogan{
+	text-align: center;
+	font-weight: bold;
+	line-height: 2em;
+	max-width: 450px;
+	margin-top: 5em;
+	font-family: 'Cinzel', serif;
+	font-size: 25px;
+	color: aliceblue;
+	opacity: none;
 }
