--- a/intro.css
+++ b/intro.css
@@ -1,34 +1,38 @@
-background {
-	background-image: url('img/flags for gradient resize.png');
-	opacity: .2;
-	width: 1100px;
-	padding-top: 7.5em;
-	display: block;
-	margin-left: auto;
-	margin-right: auto;
+H1 {
+	font-family: 'Dancing Script', cursive;
+	font-size: 75px;
+	font-weight: bold;
+	margin-top: 30px;
+	text-align: center;
 }
 
-header {
-  background: -moz-radial-gradient(center, ellipse cover, rgba(255,255,255,1) 0%, rgba(0,0,0,1) 100%); /* ff3.6+ */
-  background: -webkit-gradient(radial, center center, 0px, center center, 100%, color-stop(0%, rgba(255,255,255,1)), color-stop(100%, rgba(0,0,0,1))); /* safari4+,chrome */
-  background:-webkit-radial-gradient(center, ellipse cover, rgba(255,255,255,1) 0%, rgba(0,0,0,1) 100%); /* safari5.1+,chrome10+ */
-  background: -o-radial-gradient(center, ellipse cover, rgba(255,255,255,1) 0%, rgba(0,0,0,1) 100%); /* opera 11.10+ */
-  background: -ms-radial-gradient(center, ellipse cover, rgba(255,255,255,1) 0%, rgba(0,0,0,1) 100%); /* ie10+ */
-  background:radial-gradient(ellipse at center, rgba(255,255,255,1) 0%, rgba(0,0,0,1) 100%); /* w3c */
-  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#000000',GradientType=1 ); /* ie6-9 */;
-  height: 100px;
-  position: fixed;
-  width: 100%;
+#flag {
+padding-top: 90px;
+margin-right: auto;
+margin-left: auto;
+display: block;
 }
 
 #slogan{
 	text-align: center;
 	font-weight: bold;
 	line-height: 2em;
-	max-width: 450px;
-	margin-top: 5em;
+	max-width: 500px;
+	margin-top: 4em;
 	font-family: 'Cinzel', serif;
-	font-size: 25px;
-	color: aliceblue;
+	font-size: 20px;
+	color: black;
 	opacity: none;
+	margin-left: 400px;
+}
+#carl {
+	width: 145px;
+  height: 40px;
+  background-color: darkred;
+	color: white;
+	margin-bottom: 2em;
+	border: 1px;
+	display: block;
+	margin-left: auto;
+	margin-right: auto;
 }
